<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.hsbremen.tc.tnc.jtnc</groupId>
	<artifactId>jtnc-core</artifactId>
	<version>0.0.6-ALPHA</version>
	<packaging>pom</packaging>
	<name>jTNC</name>
	<description>Java based TNC implementation attempt.</description>
	<url>http://sidanet.hsbremen.de/</url>
	<organization>
		<name>Trust HS Bremen</name>
	</organization>
	<developers>
		<!-- TODO: eintragen -->
	</developers>
	<modules>
		<module>im</module>
		<module>transport</module>
		<module>tcg-if</module>
		<module>message</module>
		<module>tnccs</module>
	</modules>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- <main.basedir>${project.basedir}</main.basedir> -->
		<!-- <doxygen.cfg.path>${basedir}</doxygen.cfg.path> -->
		<javadoc.style>${basedir}/doc/javadoc_stylesheet.css</javadoc.style>
		<jxr.style>${basedir}/doc/jxr_stylesheet.css</jxr.style>
	</properties>
<!-- 	<distributionManagement> -->
<!-- 	    <repository> -->
<!-- 	      <id>tnc.repo</id> -->
<!-- 	      <name>Java TNC Repository</name> -->
<!-- 	      <url>file:{file-Repo-here}</url> -->
<!-- 	    </repository> -->
<!--     </distributionManagement> -->
<!-- 	<pluginRepositories> -->
<!-- 		<pluginRepository> -->
<!-- 			<id>doodleproject-repo</id> -->
<!-- 			<name>DoodleProject Maven 2 Repository</name> -->
<!-- 			<url>http://doodleproject.sourceforge.net/maven2/release</url> -->
<!-- 			<releases> -->
<!-- 				<enabled>true</enabled> -->
<!-- 			</releases> -->
<!-- 		</pluginRepository> -->
<!-- 	</pluginRepositories> -->
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.5</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.5</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<!-- Set Java 7 as projects compiler (if not available shows error) -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<fork>true</fork>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>                         
	                <docletArtifact>                                                         
	                    <groupId>org.umlgraph</groupId>                                      
	                    <artifactId>umlgraph</artifactId>                                    
	                    <version>5.6</version>                                               
	                </docletArtifact>                                                        
	                <additionalparam>-views -all -constructors</additionalparam>                           
	                <useStandardDocletOptions>true</useStandardDocletOptions>
	             	<show>private</show>
	            	<author>false</author>
					<aggregate>false</aggregate>
					<stylesheetfile>${javadoc.style}</stylesheetfile>
					<bottom><![CDATA[Copyright &#169; {currentYear}, Trust HS Bremen and its Contributors]]> </bottom>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<linkJavadoc>true</linkJavadoc>
					<javadocDir>target/site/apidocs</javadocDir>
					<stylesheet>${jxr.style}</stylesheet>
					<bottom><![CDATA[Copyright &#169; {currentYear}, Trust HS Bremen and its Contributors]]></bottom>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
